# bot_countries_demo

./: .dockerignore  .envexample  .gitignore  .pre-commit-config.yaml  .vscode_env  Dockerfile  Makefile  README.md  conftest.py  docker-compose-redis.yaml  docker-compose.yaml  manage.py  pyproject.toml  test.py
aiogram_layer/: main.py
aiogram_layer/src/: __init__.py  app.py  buttons.py  callbacks.py  constants.py  handlers.py  keyboards.py  messages.py  settings.py  states.py  validators.py
aiogram_layer/src/tests/: cases.py  fixtures.py  mocks.py  test_handlers.py  test_validators.py
cache/: cache_module.py  cache_settings.py
cache/test/: clear_test_data.py  conftest.py  contains.py  fixtures.py  methods.py  test_cache.py
django_layer/: celery.py  settings.py
django_layer/countries_app/: admin.py  models.py
django_layer/countries_app/migrations/: 0004_city_is_capital_delete_capital.py  0006_alter_language_managers.py  0007_alter_language_managers.py
django_layer/tg_bot/: apps.py
services/: city_service.py  country_service.py  currency_code.py  service_schemas.py
services/repositories/: abstract_uow.py
services/repositories/api/: abstract_api_repository.py  api_schemas.py  api_settings.py  api_urls.py  base_api_repository.py  country_detail.py  currency.py  geocoder.py  weather.py  weather_repository.py
services/repositories/db/: base_db_repository.py  cities.py  cities_repository.py  city.py  (+5 more)
services/tests/: test_country_service.py
tasks/: tasks.py
tasks/test/: conftest.py  contains.py  fixtures.py  methods.py  test_currency_cache.py
(+9 files in other folders)
