[tool.poetry]
name = "bot-countries-demo"
version = "0.1.0"
description = ""
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"
packages = [{include = "bot_countries_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
django = "^4.1.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
